# PansyQQ

./: .gitignore  README.en.md  README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/jni/: com_pansy_robot_crypter_JNI_ECDH.h  com_pansy_robot_crypter_JNI_Official.h  com_pansy_robot_crypter_JNI_RSA.h  com_pansy_robot_crypter_JNI_Security.h  ecdh.cpp  function_decrypt.cpp  official.cpp  rsa.cpp  security.cpp
app/src/main/res/anim/: left_in.xml  left_out.xml  right_in.xml  right_out.xml
app/src/main/res/drawable/: btn_background.xml  btn_background_disable.xml  btn_background_normal.xml  btn_background_pressed.xml  btn_bg_blue.xml  btn_bg_green.xml  btn_bg_red.xml  btn_relogin_background.xml  btn_relogin_background_normal.xml  btn_relogin_background_pressed.xml  btn_scan_background.xml  btn_scan_background_normal.xml  btn_scan_background_pressed.xml  card_background.xml  card_background_selector.xml  card_state_pressed.xml  dialog_imitate_ios_tv_cancel_bg.xml  dialog_imitate_ios_tv_confirm_bg.xml  dialog_imitate_ios_tv_confirm_bg2.xml  drawer_item_bg_normal.xml  drawer_item_bg_pressed.xml  drawer_item_bg_pressed_r.xml  drawer_item_selector.xml  drawer_item_selector_r.xml  edit_background.xml  edit_background_ios.xml  edit_chat_background.xml  gradual.xml  list_divider.xml  tab_contact_btn.xml  tab_log_btn.xml  tab_message_btn.xml  tab_plugin_btn.xml  verify_background.xml
app/src/main/res/layout/: about_layout.xml  activity_login.xml  activity_setting.xml  (+26 more)
(+123 files in other folders)
